--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=cob
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/cob_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=admin
+
+# JPA Properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
