--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 # JPA Properties
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
