Customize Spring Boot Logging Format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=admin
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#Customize Spring Boot Logging Format to show only log level and message (simple)
+logging.pattern.console=%-5level [%logger{36}] - %msg%n
