--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.cob</groupId>
-	<artifactId>cob</artifactId>
+	<artifactId>cob-auth-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cob</name>
-	<description>COB Portal implementation</description>
+	<name>cob-auth-service</name>
+	<description>cob auth service</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -75,7 +75,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.example</groupId>
-			<artifactId>Cob-Token-Lib</artifactId>
+			<artifactId>cob-token-lib</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<!--<dependency>
