--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 			<version>2.3.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.example</groupId>
+			<groupId>com.cob</groupId>
 			<artifactId>cob-token-lib</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
