--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cob
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/cob_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/cob_auth_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 
